--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.2.0",
+        "i": "^0.3.6",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.24.0",
         "multer": "^1.4.2",
-        "pg": "^7.12.1"
+        "npm": "^6.12.0",
+        "pg": "^7.12.1",
+        "shortid": "^2.2.15"
     },
     "devDependencies": {
         "nodemon": "^1.19.4"
