--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
         "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "coveralls": "^3.0.7",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.2.0",
-        "i": "^0.3.6",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.24.0",
         "multer": "^1.4.2",
-        "npm": "^6.12.0",
         "pg": "^7.12.1",
         "shortid": "^2.2.15"
     },
     "devDependencies": {
-        "nodemon": "^1.19.4"
+        "chai": "^4.2.0",
+        "chai-http": "^4.3.0",
+        "nodemon": "^1.19.4",
+        "mocha": "^6.2.1"
     },
     "scripts": {
-        "start": "nodemon --inspect src/index.js"
+        "start": "SET NODE_ENV=development && nodemon --inspect src/index.js",
+        "test": "SET NODE_ENV=test && mocha -exit --timeout 10000"
     },
     "repository": {
         "type": "git",
