--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "devDependencies": {
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
-        "nodemon": "^1.19.4",
-        "mocha": "^6.2.1"
+        "mocha": "^6.2.1",
+        "nodemon": "^1.19.4"
     },
     "scripts": {
         "start": "SET NODE_ENV=development && nodemon --inspect src/index.js",
