--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "moment": "^2.24.0",
         "multer": "^1.4.2",
         "pg": "^7.12.1",
+        "pg-hstore": "^2.3.3",
+        "sequelize": "^5.21.1",
         "shortid": "^2.2.15"
     },
     "devDependencies": {
